--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div>
                         <h3 class="countryText">Nigeria</h3>
                         <!-- <img class="flag" src="./img/nigeria-flag.png" alt="Nigerian_flag"> -->
-                        <p>3B, Professor Gabriel Olusanya Street,<br>Off QMB Road,Elf, Lekki Phase 1,<br> Lagos Nigeria.</p>
+                        <p>Aniwura Building, Km 14 Lekki- Epe Expressway,<br>adjacent Mega Chicken, Ikota 1st gate Bus-stop.<br> Ikota, Lekki Lagos Nigeria.</p>
                     </div>
                     <div class="contactBox">
                         <img src="./img/new_mail_gmailmessage_7037.png" alt="gmailIcon">
